--- a/src/app/shared/components/aside-bare/aside-bare.component.html
+++ b/src/app/shared/components/aside-bare/aside-bare.component.html
@@ -48,7 +48,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="mandats/list" routerLinkActive="active">
+          <a class="nav-link" routerLink="periode-mandats/list" routerLinkActive="active">
             <i class="bi bi-card-checklist"></i>
             <span class="nav-text">Mandats</span>
             <span class="tooltip-text">Mandats</span>
