--- a/src/app/features/periode-mandat/pages/mandat-list/periode-mandat-list.component.scss
+++ b/src/app/features/periode-mandat/pages/mandat-list/periode-mandat-list.component.scss
@@ -119,7 +119,29 @@
     padding: $space-4;
     flex-grow: 1;
 
-    .mandate-period, .phase-summary {
+      .date-item {
+        .date-label {
+          @include text-body-small;
+          display: block;
+          margin-bottom: 2px;
+        }
+
+        .date-label-debut {
+          color: $primary-500;
+        }
+
+        .date-label-fin {
+          color: $secondary-500;
+        }
+
+        .date-value {
+          @include text-body-regular;
+          font-weight: $font-weight-bold;
+          color: $color-text-primary;
+        }
+      }
+
+    .phase-summary {
       display: flex;
       align-items: center;
       color: $color-text-secondary;
@@ -128,10 +150,6 @@
       span {
         margin-right: $space-2;
       }
-    }
-
-    .mandate-period {
-      margin-bottom: $space-3;
     }
 
     .clickable:hover {
