--- a/src/app/features/periode-mandat/pages/mandat-detail/periode-mandat-detail.component.html
+++ b/src/app/features/periode-mandat/pages/mandat-detail/periode-mandat-detail.component.html
@@ -62,6 +62,11 @@
               </p>
 
             </div>
+            <div class="phase-card-footer">
+              <button class="btn-secondary" [routerLink]="['/phases', 'edit', phase.id]" [queryParams]="{ periodeMandatId: periodeMandat.id }">
+                <i class="bi bi-pencil-fill"></i> Modifier
+              </button>
+            </div>
           </div>
         </div>
       </section>
